removing deprecated consult-async-default-split

--- a/readme.org
+++ b/readme.org
@@ -211,7 +211,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
                          (consult--async-map #'consult-notmuch--transformer))
                        :prompt "Notmuch search: "
                        :require-match t
-                       :initial (concat consult-async-default-split initial)
+                       :initial (consult--async-split-initial initial)
                        :history 'consult-notmuch-history
                        :state #'consult-notmuch--preview
                        :lookup #'consult--lookup-member
@@ -399,7 +399,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
       ;; Keywords: mail
       ;; License: GPL-3.0-or-later
       ;; Version: 0.3
-      ;; Package-Requires: ((emacs "26.1") (consult "0.5") (notmuch "0.21"))
+      ;; Package-Requires: ((emacs "26.1") (consult "0.8") (notmuch "0.21"))
       ;; Homepage: https://codeberg.org/jao/consult-notmuch
 
       #+end_src
