obsolete consult--cached-buffers

--- a/readme.org
+++ b/readme.org
@@ -109,9 +109,10 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
       (defun consult-notmuch--interesting-buffers ()
         "Returns a list of names of buffers with interesting notmuch data."
-        (seq-map #'buffer-name
-                 (seq-filter #'notmuch-interesting-buffer
-                             (consult--cached-buffers))))
+        (consult--buffer-query
+         :as (lambda (buf)
+               (when (notmuch-interesting-buffer buf)
+                 (buffer-name buf)))))
 
       ;;;###autoload
       (defvar consult-notmuch-buffer-source
