keeping up with the consult times
Fixes #4.

--- a/readme.org
+++ b/readme.org
@@ -190,7 +190,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
     candidates generator will look like:
 
     #+begin_src emacs-lisp
-      (defun consult-notmuch--command (_ input)
+      (defun consult-notmuch--command (input)
         "Construct a search command for emails containing INPUT."
         `("notmuch" "search" ,input))
 
@@ -198,7 +198,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
         "Perform an asynchronous notmuch search via `consult--read'.
       If given, use INITIAL as the starting point of the query."
         (consult--read (consult--async-command
-                           (list :command #'consult-notmuch--command)
+                           #'consult-notmuch--command
                          (consult--async-map #'consult-notmuch--transformer))
                        :prompt "Notmuch search: "
                        :require-match t
