--- a/readme.org
+++ b/readme.org
@@ -310,9 +310,19 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
       #+end_src
 
-      and use ~notmuch-show~ to show a candidate. Remember that we've
-      stashed the thread id needed by that function as a property of
-      of our candidate string, and provided an accessor for it:
+      and use ~notmuch-show~ to show a candidate. We are also going to
+      have a customizable flag for deciding if the preview should
+      include the whole thread or just a single matching message:
+
+      #+begin_src emacs-lisp :noweb-ref customization
+        (defcustom consult-notmuch-show-single-message t
+          "Show only the matching message or the whole thread in (pre)views."
+          :type 'boolean)
+      #+end_src
+
+      Remember that we've stashed the thread id needed by that
+      function as a property of of our candidate string, and provided
+      an accessor for it:
 
       #+begin_src emacs-lisp
 
@@ -320,7 +330,9 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
           "Open resulting CANDIDATE in ‘notmuch-show’ view, in a preview buffer."
           (consult-notmuch--close-preview)
           (when-let ((thread-id (consult-notmuch--thread-id candidate)))
-            (notmuch-show thread-id nil nil nil consult-notmuch--buffer-name)))
+            (let ((notmuch-show-only-matching-messages
+                   consult-notmuch-show-single-message))
+              (notmuch-show thread-id nil nil nil consult-notmuch--buffer-name))))
 
       #+end_src
 
@@ -338,7 +350,9 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
           "Open resulting CANDIDATE in ‘notmuch-show’ view."
           (consult-notmuch--close-preview)
           (when-let ((thread-id (consult-notmuch--thread-id candidate)))
-            (let* ((subject (car (last (split-string candidate "\t"))))
+            (let* ((notmuch-show-only-matching-messages
+                    consult-notmuch-show-single-message)
+                   (subject (car (last (split-string candidate "\t"))))
                    (title (concat consult-notmuch--buffer-name " " subject)))
               (notmuch-show thread-id nil nil nil title))))
 
