--- a/readme.org
+++ b/readme.org
@@ -332,10 +332,9 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
                    (consult-notmuch--set :date_relative (match-string 2 str))
                    (consult-notmuch--set :tags (split-string (match-string 3 str))))
                  (setq consult-notmuch--info nil))
-                ((string-match "\\(Subject\\|From\\|To\\|Cc\\|Date\\): \\(.+\\)"
-                               str)
+                ((string-match "\\(Subject\\|From\\|To\\|Cc\\|Date\\): \\(.+\\)?" str)
                  (let ((k (intern (format ":%s" (match-string 1 str))))
-                       (v (match-string 2 str)))
+                       (v (or (match-string 2 str) "")))
                    (setq consult-notmuch--partial-headers
                          (plist-put consult-notmuch--partial-headers k v)))))
           nil))
