--- a/readme.org
+++ b/readme.org
@@ -451,70 +451,82 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 * Integration with Embark
 
 ** Embark actions
-We can integrate ~consult-notmuch~ with Embark by defining a keymap with actions on notmuch messages and associating it with the completion category of ~notmuch-result~. In this keymap we associate ~+~ and ~-~ (like in notmuch buffers) to a function that tags a message:
+We can integrate ~consult-notmuch~ with Embark by defining a keymap with actions
+on notmuch messages and associating it with the completion category of
+~notmuch-result~. In this keymap we associate ~+~ and ~-~ (like in notmuch
+buffers) to a function that tags a message:
 
-#+BEGIN_SRC emacs-lisp
-  (defvar embark-notmuch-map 
+#+begin_src emacs-lisp :noweb-ref embark-actions
+  (defvar consult-notmuch-map 
       (let ((map (make-sparse-keymap))) 
-        (define-key map (kbd "+") 'embark-notmuch-tag)
-        (define-key map (kbd "-") 'embark-notmuch-tag)
+        (define-key map (kbd "+") 'consult-notmuch-tag)
+        (define-key map (kbd "-") 'consult-notmuch-tag)
         map)
       "Keymap for actions on Notmuch entries.")
 
-  (add-to-list 'embark-keymap-alist '(notmuch-result . embark-notmuch-map))
-#+END_SRC
+  (set-keymap-parent consult-notmuch-map embark-general-map)
+  (add-to-list 'embark-keymap-alist '(notmuch-result . consult-notmuch-map))
 
-~embark-notmuch-tag~ should take as argument the search result as a propertized message string. Because Embark feeds it this string, this function does not need to be interactive:
+#+end_src
 
-#+BEGIN_SRC emacs-lisp
-(defun embark-notmuch-tag (msg)
-    (when-let* ((thread-id (consult-notmuch--thread-id msg))
-                (tags (get-text-property 0 'tags msg))
-                (tag-changes (notmuch-read-tag-changes
-                              tags "Tags: "
-                             "+")))
-      (notmuch-tag (concat "(" thread-id ")")
-                   tag-changes)))
-#+END_SRC
+~consult-notmuch-tag~ should take as argument the search result as a propertized
+message string. Because Embark feeds it this string, this function does not need
+to be interactive:
 
-We can also create bespoke functions to automatically tag a message with certain tags using Embark. For example, here is a function that returns a tagger:
+#+begin_src emacs-lisp :noweb-ref embark-actions
+  (defun consult-notmuch-tag (msg)
+      (when-let* ((thread-id (consult-notmuch--thread-id msg))
+                  (tags (get-text-property 0 'tags msg))
+                  (tag-changes (notmuch-read-tag-changes
+                                tags "Tags: "
+                               "+")))
+        (notmuch-tag (concat "(" thread-id ")")
+                     tag-changes)))
 
-#+BEGIN_SRC emacs-lisp
-  (defun embark-notmuch-make-tagger (tags)
+#+end_src
+
+We can also create bespoke functions to automatically tag a message with certain
+tags using Embark. For example, here is a function that returns a tagger:
+
+#+begin_src emacs-lisp
+  (defun consult-notmuch-make-tagger (tags)
       "Make a function to tag a message with TAGS."
       (lambda (msg)
         "Tag a notmuch message using Embark."
         (when-let ((thread-id (consult-notmuch--thread-id msg)))
           (notmuch-tag (concat "(" thread-id ")")
                        (split-string tags)))))
-#+END_SRC
+#+end_src
 
-We use this to map Embark actions that trash, archive or flag messages to ~d~, ~a~ and ~f~ respectively:
+We use this to map Embark actions that trash, archive or flag messages to ~d~,
+~a~ and ~f~ respectively:
 
-#+BEGIN_SRC emacs-lisp
-  (define-key embark-notmuch-map (kbd "d") (embark-notmuch-make-tagger "+trash -inbox"))
-  (define-key embark-notmuch-map (kbd "a") (embark-notmuch-make-tagger "-inbox"))
-  (define-key embark-notmuch-map (kbd "f") (embark-notmuch-make-tagger "+flagged"))
-#+END_SRC
+#+begin_src emacs-lisp
+  (define-key consult-notmuch-map (kbd "d") (consult-notmuch-make-tagger "+trash -inbox"))
+  (define-key consult-notmuch-map (kbd "a") (consult-notmuch-make-tagger "-inbox"))
+  (define-key consult-notmuch-map (kbd "f") (consult-notmuch-make-tagger "+flagged"))
+#+end_src
 
 ** Embark export
 
-To export search results to a notmuch search buffer with Embark, we can define an exporter:
+To export search results to a notmuch search buffer with Embark, we can define
+an exporter:
 
-#+BEGIN_SRC emacs-lisp
-  (defun embark-export-consult-notmuch (msgs)
+#+begin_src emacs-lisp :noweb-ref embark-actions
+  (defun consult-notmuch-export (msgs)
       "Create a notmuch search buffer listing messages."
       (notmuch-search
        (concat "("
                (mapconcat #'consult-notmuch--thread-id msgs " ")
                ")")))
-#+END_SRC
+#+end_src
 
-Associating this exporter with ~consult-notmuch~ is a matter of adding to ~embark-exporters-alist~:
+Associating this exporter with ~consult-notmuch~ is a matter of adding to
+~embark-exporters-alist~:
 
-#+BEGIN_SRC emacs-lisp
-  (add-to-list 'embark-exporters-alist '(notmuch-result . embark-export-consult-notmuch))
-#+END_SRC
+#+begin_src emacs-lisp :noweb-ref embark-actions
+  (add-to-list 'embark-exporters-alist '(notmuch-result . consult-notmuch-export))
+#+end_src
 
 * Package boilerplate                                            :noexport:
 *** consult-notmuch.el
@@ -534,6 +546,10 @@ Associating this exporter with ~consult-notmuch~ is a matter of adding to ~embar
       <<customization>>
 
       <<private-functions>>
+
+      ;; Embark Integration:
+      (with-eval-after-load 'embark
+        <<embark-actions>>)
 
       <<public-functions>>
 
