--- a/readme.org
+++ b/readme.org
@@ -49,6 +49,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
       If given, use INITIAL as the starting point of the query."
         (interactive)
         (consult-notmuch--tree (consult-notmuch--search initial)))
+
     #+end_src
 
     They're implemented in terms of a common search driver, with the
@@ -81,7 +82,6 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
     of my =~/var/mail= directory i want to use:
 
     #+begin_src emacs-lisp :noweb-ref no :tangle no
-
       (defun jao-consult-notmuch-folder (&optional tree folder)
         (interactive "P")
         (let* ((root "~/var/mail/")
@@ -96,6 +96,49 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
       (defun jao-consult-notmuch-feeds (&optional tree)
         (interactive "P")
         (jao-consult-folder tree "feeds"))
+    #+end_src
+*** An appetiser: address search
+
+    As a simple example of how the simplest asynchronous consult query
+    looks, let's write a function that allows us selecting a mail
+    address using a notmuch address query, which in the CLI looks like
+
+    #+begin_src shell :tangle no
+      notmuch address --format=text <query>
+    #+end_src
+
+    A brute force approach is to issue the command above
+    synchronously, split the result, and use ~completing-read~:
+
+    #+begin_src emacs-lisp :tangle no
+      (defun read-notmuch-address (input)
+        (let* ((cmd (format "notmuch address --format=text '%s'" input))
+               (res (shell-command-to-string cmd)))
+          (completing-read "Notmuch address: " (split-string res "\n"))))
+    #+end_src
+
+    If you notmuch database is not that big, this approach actually
+    works reasonably well, but it doesn't scale with its size.  That's
+    where an asynchronous command can help: we call the shell command
+    as the input varies, collecting and displaying the results as
+    they're available.  Here's how that looks using consult
+    asynchronous command infrastructure:
+
+    #+begin_src emacs-lisp :noweb-ref public-functions
+      (defun consult-notmuch--address-command (input)
+        "Spec for an async command querying a notmuch address with INPUT."
+        `("notmuch" "address" "--format=text" ,input))
+
+      ;;;###autoload
+      (defun consult-notmuch-address ()
+        "Search through the notmuch database for email addresses.
+      The selected address is pushed to the kill ring."
+        (interactive)
+        (let ((address (consult--read (consult--async-command
+		                          #'consult-notmuch--address-command)
+		                      :prompt "Notmuch addresses: "
+		                      :sort nil)))
+          (kill-new (message "%s" address))))
     #+end_src
 
 *** Buffer narrowing
